now gets unique id from server for each chat

--- a/startChat.html
+++ b/startChat.html
@@ -76,7 +76,7 @@
         const modal = document.querySelector('.modal');
         const closeBtn = document.querySelector('#closeModal');
         const userInfo = document.querySelector('.userInfo');
-
+        console.log(userInfo.value)
         
         window.onclick = function(event) {
             if (event.target == modal) {
