--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
     }
 
     function outputMessage(message, id){
+      console.log(message)
       const div = document.createElement('div');
       div.classList.add('message');
       // <span>${message.time}</span>
