added classes for response and for agent messages

--- a/index.html
+++ b/index.html
@@ -206,6 +206,38 @@
     border-radius: 6px;
     height: 40px;
   }
+
+  .myMessage {
+    float: right;
+    clear: both;
+    font-size: 14px;
+    line-height: 16px;
+    color: #000;
+    font-weight: 300;
+    padding: 10px 10px 5px 10px;
+    margin: 10px 10px 10px 10px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    min-width: 300px;
+    background: #efe;
+    max-width: 650px;
+  }
+
+  .fromMessage {
+    float: left;
+    min-width: 300px;
+    clear: both;
+    font-size: 14px;
+    line-height: 16px;
+    color: #000;
+    font-weight: 300;
+    padding: 10px 10px 10px 10px;
+    margin: 5px 10px 10px 10px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background: #def;
+    max-width: 650px;
+  }
   </style>
 </head>
 
